Some CSS fixes for 3-column width and wrapping

--- a/src/css/components/_App.css
+++ b/src/css/components/_App.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     & > * {
       flex-grow: 1;
@@ -127,15 +128,5 @@
         }
       }
     }
-  }
-
-  .app__left-side,
-  .app__right-side {
-    width: 60%;
-  }
-
-  .app__right-side {
-    margin-left: auto;
-    margin-right: 0;
   }
 }
